...
    }
    
    private func image(for status: Status) -> UIImage?
    {
        switch status
        {
        case .success  : return UIImage.paymentSDKImageNamed("payment_success")
        case .failure  : return UIImage.paymentSDKImageNamed("payment_failure")
        }
    }
}

